--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 
 body {
   color: var(--clr-title-body);
+  font-family: var(--subtitle-font);
   font-size: 18px;
   line-height: 1.6;
 }
@@ -25,9 +26,8 @@ h1 {
 }
 
 
-
 .subtitle {
-  font-family: var(--subtitle-font);
+  font-family: inherit;
   font-weight: 400;
   font-size: 2.25rem;
   width: 60%;
